--- a/style.css
+++ b/style.css
@@ -1,4 +1,59 @@
 *
 {
-    background-color: #f0eeee;
+    background-color: #ffffff;
 }
+h1
+{
+    text-align: center;
+}
+h3
+{
+    text-align: center;
+}
+body
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+label
+{
+    font-size: 20px;
+}
+select
+{
+    background-color: rgb(255, 255, 255);
+    font-size: 20px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+input
+{
+    background-color: #fff;
+    border-radius: 10px;
+    font-size: 20px;
+    padding: 10px;
+}
+#submission
+{
+    text-align: center;
+}
+
+#container
+{
+    text-align: center;
+}
+
+@media only screen and (max-width: 675px) {
+
+    select
+    {
+        font-size: 15px;
+    }
+
+    .imageQ
+    {
+        width: 90%;
+    }
+  }
