--- a/style.css
+++ b/style.css
@@ -6,13 +6,12 @@ h1
 {
     text-align: center;
 }
-h3
-{
-    text-align: center;
-}
 body
 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    height: 100%;
+    align-items: center;
 }
 
 label
@@ -35,15 +34,41 @@ input
     font-size: 20px;
     padding: 10px;
 }
-#submission
-{
-    text-align: center;
-}
+
 
 #container
 {
     text-align: center;
 }
+
+#holder
+{
+    display: grid;
+    grid-template-areas: 
+    'left right';
+    grid-template-columns: 1fr 1fr;
+    height: 100%;
+    width: 100%;
+}
+
+#intro
+{
+     grid-area: left;
+    text-align: center;
+    font-size: 20px;
+    display: grid;
+    align-items: center;
+}
+
+#submission
+{
+    grid-area: right;
+    text-align: center;
+    display: grid;
+    align-items: center;
+    font-size: 20px;
+}
+
 
 @media only screen and (max-width: 675px) {
 
