--- a/style.css
+++ b/style.css
@@ -68,6 +68,19 @@ input
     align-items: center;
     font-size: 20px;
 }
+.answer
+{
+    margin: 10px;
+    border-radius: 10px;
+    font-size: 30px;
+    color: #ffffff;
+    background-color: rgb(197, 197, 255);
+}
+
+.answer:hover
+{
+    background-color: #000000;
+}
 
 
 @media only screen and (max-width: 675px) {
@@ -79,6 +92,24 @@ input
     h3{
         width: 80%;
         font-size: 16px;
+        margin: auto;
+    }
+    #holder
+    {
+        grid-template-areas: 
+        'left'
+        'right';
+    }
+    /* #struct
+    {
+    } */
+    #intro
+    {
+        text-align: center;
+    }
+
+    #form
+    {
         margin: auto;
     }
 
