--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ input
         grid-template-areas: 
         'left'
         'right';
+        grid-template-columns: 1fr 1fr;
     }
     /* #struct
     {
