--- a/style.css
+++ b/style.css
@@ -105,7 +105,8 @@ input
         grid-template-areas: 
         'left'
         'right';
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
+
     }
     /* #struct
     {
