--- a/style.css
+++ b/style.css
@@ -99,12 +99,14 @@ input
 {
     height: 300px;
     width: auto;
+    margin: auto;
 }
 
 #emof
 {
     height: 300px;
     width: auto;
+    margin: auto;
 }
 
 
