--- a/style.css
+++ b/style.css
@@ -29,10 +29,16 @@ select
 
 input
 {
-    background-color: #fff;
+    background-color: #c3a1ce;
     border-radius: 10px;
     font-size: 20px;
     padding: 10px;
+    color: white;
+}
+input:hover
+{
+    background-color: #7a5d8f;
+    color: #d2d0d4;
 }
 
 
@@ -97,16 +103,26 @@ input
 
 #confet
 {
-    height: 300px;
+    height: 400px;
     width: auto;
     margin: auto;
 }
 
 #emof
 {
-    height: 300px;
+    height: 500px;
     width: auto;
     margin: auto;
+}
+
+#installButton
+{
+    text-align: center;
+    font-size: 20px;
+    border-radius: 5px;
+    margin: 20px;
+    background-color: rgb(255, 255, 255);
+    color: #2e312f;    
 }
 
 
@@ -127,8 +143,18 @@ input
         'left'
         'right';
         grid-template-columns: 1fr;
-
     }
+    
+    #confet
+    {
+        height: 225px;
+    }
+
+    #emof
+    {
+        height: 225px;
+    }
+
     #struct
     {
         margin: 20px;
@@ -146,5 +172,18 @@ input
     .imageQ
     {
         width: 70%;
+    }
+  }
+
+  @media only screen and (max-width: 500px) 
+  {
+    #confet
+    {
+        height: 175px;
+    }
+
+    #emof
+    {
+        height: 175px;
     }
   }
