--- a/style.css
+++ b/style.css
@@ -121,6 +121,10 @@ input:hover
 }
 #installButton
 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: #c3a1ce;
     border-radius: 10px;
     font-size: 20px;
