--- a/style.css
+++ b/style.css
@@ -126,16 +126,16 @@ input:hover
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #c3a1ce;
+    background-color: #ffffff;
     border-radius: 10px;
     font-size: 20px;
     padding: 10px;
-    color: white;  
+    color: rgb(3, 3, 3);  
 }
 #installButton:hover
 {
-    background-color: #7a5d8f;
-    color: #d2d0d4;
+    background-color: #2b2a2a;
+    color: #ffffff;
 }
 
 
@@ -186,6 +186,26 @@ input:hover
     {
         width: 70%;
     }
+
+    #installButton
+    {
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #c3a1ce;
+        border-radius: 10px;
+        font-size: 20px;
+        padding: 10px;
+        color: white;  
+    }
+    #installButton:hover
+    {
+        background-color: #7a5d8f;
+        color: #d2d0d4;
+    }
+
   }
 
   @media only screen and (max-width: 500px) 
