--- a/style.css
+++ b/style.css
@@ -1,222 +1,163 @@
-*
-{
-    background-color: #ffffff;
-}
-h1
-{
-    text-align: center;
-}
-body
-{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0px;
-    height: 100%;
-    align-items: center;
+* {
+    background-color: #f9f9f9;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-label
-{
-    font-size: 20px;
+h1 {
+    text-align: center;
+    color: #4a4a4a;
+    font-size: 2.5em;
+    margin: 20px 0;
 }
-select
-{
-    background-color: rgb(255, 255, 255);
-    font-size: 20px;
+
+body {
+    font-family: 'Segoe UI', Roboto, 'Open Sans', sans-serif;
+    margin: 0;
+    min-height: 100vh;
+
+    color: #333;
+}
+
+label {
+    font-size: 1.2em;
+    color: #4a4a4a;
+}
+
+select, input {
+    font-size: 1em;
+    padding: 10px;
     margin: 10px;
-    padding: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    outline: none;
+    transition: all 0.3s ease-in-out;
+    display: block;
+    width: calc(100% - 40px); /* Adjust width for padding */
+    max-width: 300px;
+    margin: 10px auto;
 }
 
-input
-{
-    background-color: #c3a1ce;
-    border-radius: 10px;
-    font-size: 20px;
-    padding: 10px;
-    color: white;
-}
-input:hover
-{
-    background-color: #7a5d8f;
-    color: #d2d0d4;
+select:hover, input:hover {
+    border-color: #888;
 }
 
+input {
+    background-color: #6c63ff;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+}
 
-#container
-{
+input:hover {
+    background-color: #4a4a8a;
+    color: #f0f0f0;
+}
+
+#container {
     text-align: center;
+    width: 90%;
+    margin: auto;
+    padding: 20px;
 }
 
-#holder
-{
+#holder {
     display: grid;
-    grid-template-areas: 
-    'left right';
-    grid-template-columns: 1fr 1fr;
-    height: 100%;
+    grid-template-areas: 'left right';
+    grid-template-columns: 1fr;
+    gap: 20px;
     width: 100%;
+    margin-top: 20px;
 }
 
 #intro
 {
-     grid-area: left;
     text-align: center;
-    font-size: 20px;
-    display: grid;
-    align-items: center;
+    padding: 20px;
+    font-size: 1em;
 }
 
-#submission
+#submission 
 {
-    grid-area: right;
-    text-align: center;
-    display: grid;
-    align-items: center;
-    font-size: 20px;
-}
-.answer
-{
-    margin: 10px;
-    border-radius: 10px;
-    font-size: 30px;
-    color: #ffffff;
-    background-color: rgb(197, 197, 255);
-}
-
-.answer:hover
-{
-    background-color: #000000;
-}
-
-#timer
-{
-    text-align: center;
-    font-size: 20px;
-}
-
-#emojies
-{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-}
-
-#confet
-{
-    height: 400px;
-    width: auto;
     margin: auto;
-}
-
-#emof
-{
-    height: 500px;
-    width: auto;
-    margin: auto;
-}
-#but
-{
-    position: relative;
+    width: 700px;
     text-align: center;
-}
-#installButton
-{
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #ffffff;
+    padding: 20px;
+    border: 1px solid #ddd;
     border-radius: 10px;
-    font-size: 20px;
+    background: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-size: 1em;
+}
+
+.answer {
     padding: 10px;
-    color: rgb(3, 3, 3);  
-}
-#installButton:hover
-{
-    background-color: #2b2a2a;
-    color: #ffffff;
+    border-radius: 5px;
+    background-color: #6c63ff;
+    color: #fff;
+    text-align: center;
+    font-size: 1.5em;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
 
+.answer:hover {
+    background-color: #333;
+    color: #f0f0f0;
+}
+
+#timer {
+    margin-top: 20px;
+    font-size: 1.2em;
+    text-align: center;
+}
+
+#installButton {
+    display: inline-block;
+    margin: 20px auto;
+    padding: 15px 30px;
+    background-color: #6c63ff;
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: bold;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+#confet, #emof {
+    height: 400px;
+}
+
+#installButton:hover {
+    background-color: #4a4a8a;
+}
 
 @media only screen and (max-width: 675px) {
+    h1 {
+        font-size: 2em;
+    }
 
-    select
-    {
-        font-size: 15px;
-    }
-    h3{
-        width: 80%;
-        font-size: 16px;
-        margin: auto;
-    }
-    #holder
-    {
-        grid-template-areas: 
-        'left'
-        'right';
+    #holder {
+        grid-template-areas:
+            'left'
+            'right';
         grid-template-columns: 1fr;
-    }
-    
-    #confet
-    {
-        height: 225px;
+        gap: 10px;
     }
 
-    #emof
-    {
-        height: 225px;
+    #intro, #submission {
+        font-size: 0.9em;
     }
+    #confet, #emof {
+        height: 240px;
+    }
+}
 
-    #struct
-    {
-        margin: 20px;
+@media only screen and (max-width: 500px) {
+    #confet, #emof {
+        height: 150px;
     }
-    #intro
-    {
-        text-align: center;
-    }
-
-    #form
-    {
-        margin: auto;
-    }
-
-    .imageQ
-    {
-        width: 70%;
-    }
-
-    #installButton
-    {
-
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #c3a1ce;
-        border-radius: 10px;
-        font-size: 20px;
-        padding: 10px;
-        color: white;  
-    }
-    #installButton:hover
-    {
-        background-color: #7a5d8f;
-        color: #d2d0d4;
-    }
-
-  }
-
-  @media only screen and (max-width: 500px) 
-  {
-    #confet
-    {
-        height: 175px;
-    }
-
-    #emof
-    {
-        height: 175px;
-    }
-  }
+}
