--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ input:hover {
 
 #submission 
 {
+    width: 80%;
     margin: auto;
     text-align: center;
     padding: 20px;
@@ -104,6 +105,7 @@ input:hover {
     font-size: 1.5em;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
+    margin: 5px;
 }
 
 .answer:hover {
