--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ input:hover {
     color: #f0f0f0;
 }
 
-#timer {
+#time {
     margin-top: 20px;
     font-size: 1.2em;
     text-align: center;
