--- a/style.css
+++ b/style.css
@@ -5,6 +5,24 @@
     padding: 0;
 }
 
+#reset
+{
+    margin-left: auto;
+    margin-right: 20px;
+    background-color: #6c63ff;
+    color: #fff;
+    font-size: 1em;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    outline: none;
+    transition: all 0.3s ease-in-out;
+    display: block;
+    width: calc(100% - 40px); /* Adjust width for padding */
+    max-width: 300px;
+    margin: 10px auto;
+}
+
 h1 {
     text-align: center;
     color: #4a4a4a;
