--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     padding: 0;
 }
 
+
+/* https://stackoverflow.com/questions/2486387/how-to-hide-the-scrollbar-using-javascript */
+::-webkit-scrollbar {
+    width: 0px;
+}
+
+
 #resett
 {
     margin-left: auto;
